The 3 APIs finished.