@@ -1,8 +1,6 @@
 package io.javabrains.moviecatalogservice.resources;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -13,7 +11,8 @@ import org.springframework.web.reactive.function.client.WebClient;
 
 import io.javabrains.moviecatalogservice.models.CatalogItem;
 import io.javabrains.moviecatalogservice.models.Movie;
-import io.javabrains.moviecatalogservice.models.Rating;
+import io.javabrains.moviecatalogservice.models.UserCatalog;
+import io.javabrains.moviecatalogservice.models.UserRating;
 
 @RestController
 @RequestMapping("/catalog")
@@ -32,27 +31,37 @@ public class MovieCatalogResource {
 	}
 
 	@GetMapping("/{userId}")
-	public List<CatalogItem> getCatalog(@PathVariable("userId") String userId) {
-
-		List<Rating> ratingsList = Arrays.asList(
-				new Rating("1234", 3), 
-				new Rating("5678", 4)
-		);
-
-		return ratingsList.stream()
+	public UserCatalog getCatalog(@PathVariable("userId") String userId) {
+		UserCatalog userCatalog = new UserCatalog();
+//		List<Rating> ratingsList = Arrays.asList(
+//				new Rating("1234", 3), 
+//				new Rating("5678", 4)
+//		);
+		
+		
+		UserRating userRating 
+			= restTemplate.getForObject("http://localhost:8083/ratingsdata/user/" + userId, UserRating.class);
+		
+		if (null == userRating) return userCatalog;
+		
+		List<CatalogItem> catalogItems = userRating.getRatings().stream()
                 .map(rating -> {
-//                    Movie movie = restTemplate.getForObject("http://localhost:8082/movies/" + rating.getMovieId(), Movie.class);
+                    Movie movie 
+                    	= restTemplate.getForObject("http://localhost:8082/movies/" + rating.getMovieId(), Movie.class);
                 	
-                	Movie movie = webClientBuilder.build()
-			                		.get()
-			                		.uri("http://localhost:8082/movies/" + rating.getMovieId())
-			                		.retrieve()
-			                		.bodyToMono(Movie.class)
-			                		.block();
+//                	Movie movie = webClientBuilder.build()
+//			                		.get()
+//			                		.uri("http://localhost:8082/movies/" + rating.getMovieId())
+//			                		.retrieve()
+//			                		.bodyToMono(Movie.class)
+//			                		.block();
                 	
                     return new CatalogItem(movie.getName(), "Description", rating.getRating());
                 })
-				.collect(Collectors.toList());
+				.toList();
+		userCatalog.setUserId(userId);
+		userCatalog.setCatalogItems(catalogItems);
+		return userCatalog;
 
 	}
 
